<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal" android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbars="vertical" android:id="@+id/epTakePictureBtn" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ScrollView android:id="@+id/scrollView1" android:layout_height="match_parent" android:layout_width="match_parent">
        <LinearLayout android:id="@+id/linearLayout10" android:orientation="vertical" android:layout_height="match_parent" android:layout_margin="2sp" android:layout_width="match_parent">
            <TextView android:text="@string/productNameLabel" android:gravity="center_vertical" android:layout_margin="2sp" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content"></TextView>
            <EditText android:id="@+id/epName" android:layout_height="40sp" android:text="EditText" android:layout_width="match_parent" android:layout_margin="5sp" android:layout_gravity="left"></EditText>
            <TextView android:text="@string/productDescriptionLabel" android:gravity="center_vertical" android:layout_width="80sp" android:id="@+id/textView2" android:layout_height="match_parent" android:layout_margin="2sp"></TextView>
            <EditText android:id="@+id/epDescription" android:text="EditText" android:layout_width="match_parent" android:layout_margin="5sp" android:layout_gravity="left" android:layout_height="150sp" android:singleLine="false" android:inputType="textMultiLine" android:gravity="left|top" android:lines="7"></EditText>
            <TextView android:text="@string/productTypeLabel" android:gravity="center_vertical" android:layout_margin="2sp" android:layout_width="80sp" android:id="@+id/textView5" android:layout_height="match_parent"></TextView>
            <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
                <Button android:text="@string/epNewTypeBtnLabel" android:layout_width="wrap_content" android:id="@+id/epNewTypeBtn" android:layout_height="wrap_content" android:layout_margin="5sp" android:layout_gravity="center_vertical"></Button>
                <Spinner android:layout_margin="5sp" android:layout_height="40sp" android:id="@+id/epTypeSpinner" android:layout_width="match_parent" android:layout_gravity="center_vertical"></Spinner>
            </LinearLayout>
            <TextView android:text="@string/productPriceLabel" android:gravity="center_vertical" android:layout_margin="2sp" android:layout_width="80sp" android:id="@+id/textView3" android:layout_height="match_parent"></TextView>
            <EditText android:id="@+id/epPrice" android:numeric="integer|decimal" android:layout_height="40sp" android:text="EditText" android:layout_width="match_parent" android:layout_margin="5sp" android:layout_gravity="left"></EditText>
            <TextView android:text="@string/productCapacityLabel" android:gravity="center_vertical" android:layout_margin="2sp" android:layout_width="80sp" android:id="@+id/textView4" android:layout_height="match_parent"></TextView>
            <EditText android:id="@+id/epCapacity" android:numeric="integer|decimal" android:layout_height="40sp" android:text="EditText" android:layout_width="match_parent" android:layout_margin="5sp" android:layout_gravity="left"></EditText>
            <TextView android:text="@string/productStockLabel" android:gravity="center_vertical" android:layout_margin="2sp" android:layout_width="80sp" android:id="@+id/textView6" android:layout_height="match_parent"></TextView>
            <EditText android:id="@+id/epStock" android:numeric="integer" android:layout_height="40sp" android:text="EditText" android:layout_width="match_parent" android:layout_margin="5sp" android:layout_gravity="left"></EditText>
            <TextView android:text="@string/productBarcodeLabel" android:gravity="center_vertical" android:layout_margin="2sp" android:layout_width="80sp" android:id="@+id/textView7" android:layout_height="match_parent"></TextView>
            <EditText android:id="@+id/epBarcode" android:numeric="integer" android:layout_height="40sp" android:text="EditText" android:layout_width="match_parent" android:layout_margin="5sp" android:layout_gravity="left"></EditText>
            <TextView android:layout_gravity="center_vertical" android:text="@string/epTakePictureLabel" android:gravity="center_vertical" android:layout_margin="2sp" android:layout_width="80sp" android:id="@+id/textView8" android:layout_height="match_parent"></TextView>
            <LinearLayout android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:layout_width="match_parent">
                <Button android:text="@string/epTakePictureBtn" android:gravity="center_vertical" android:layout_margin="2sp" android:id="@+id/epTakePictureButton" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:layout_width="wrap_content"></Button>
                <TextView android:layout_gravity="center_vertical" android:text="@string/epNoPicture" android:gravity="center_vertical" android:layout_margin="2sp" android:layout_width="wrap_content" android:id="@+id/epPictureLink" android:layout_height="wrap_content"></TextView>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="match_parent">
                <Button android:text="@string/cancelBtn" android:layout_margin="5sp" android:layout_width="wrap_content" android:id="@+id/epCancelBtn" android:layout_height="wrap_content"></Button>
                <Button android:text="@string/saveBtn" android:layout_margin="5sp" android:layout_width="150sp" android:id="@+id/epSaveBtn" android:layout_height="wrap_content"></Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
