<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="match_parent" android:orientation="horizontal" android:layout_width="match_parent">
    <ScrollView android:id="@+id/scrollView1" android:layout_height="match_parent" android:layout_width="match_parent">
        <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="match_parent" android:orientation="vertical">
            <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/etNameLabel" android:layout_margin="2sp"></TextView>
            <EditText android:layout_width="match_parent" android:text="EditText" android:layout_margin="5sp" android:id="@+id/etNameLabel" android:layout_height="40sp"></EditText>
            <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="match_parent">
                <Button android:text="@string/etCancelLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/etCancelBtn" android:layout_marginTop="10sp"></Button>
                <Button android:layout_height="wrap_content" android:text="@string/etSaveLabel" android:layout_width="150sp" android:id="@+id/etSaveBtn" android:layout_marginTop="10sp"></Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
